complete brojecct build

--- a/CountryInfoFetcher/src/main/webapp/RefreshPage.html
+++ b/CountryInfoFetcher/src/main/webapp/RefreshPage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>County Information Fetcher</title>
 </head>
 <body>
 
@@ -14,7 +14,7 @@
 	<br/>
 	
 	<form action="GetCountryDetails" method="post">
-		<button>Get Country Details</button>
+		<button>Get All Country Name</button>
 	</form>
 </body>
 </html>
